data/NGS/outOfDate.txt
NGS 过时代码/老版本软件

-- 专用软件都归为过时软件



========================================
过时软件的安装和使用：STAR
----------------------------------------

1. STAR
(1B)[过时]安装star 2.7：https://github.com/alexdobin/STAR
# Get latest STAR source from releases
wget https://github.com/alexdobin/STAR/archive/2.7.0f.tar.gz
tar -xzf 2.7.0f.tar.gz
cd STAR-2.7.0f

#编译 Compile under Linux
cd STAR/source
make STAR

#然后在~/bin下添加快捷方式
$ ln -s /home/wangjl/data/software/STAR-2.7.0f/source/STAR

#查看版本号
$ STAR --version
2.7.0f





(2)最后使用的是(lab上一致的)老版本2.5.2：
https://github.com/alexdobin/STAR/archive/2.5.2b.tar.gz
https://github.com/alexdobin/STAR

find one on the server:
$ find / -name '*STAR*'
/share/apps/genomics/STAR-2.5.2b

use it directly:
$ cd /home/wangjl/bin/
$ ln -s /share/apps/genomics/STAR-2.5.2b/bin/Linux_x86_64/STAR
$ STAR --version
STAR_2.5.2b






========================================
samtools 1.16.1
----------------------------------------

1. [2022.10]CentOS 7.9 重装 samtools 新版本(1.16.1) [过时]

git clone https://github.com/samtools/samtools.git
git clone https://github.com/samtools/htslib.git 

先下载子模块
$ cd htslib
$ git submodule update --init --recursive

$ make #编译库


开始编译主程序
$ cd ../samtools
$ autoheader            # Build config.h.in (this may generate a warning about
                      # AC_CONFIG_SUBDIRS - please ignore it).
$ autoconf -Wno-syntax
$ ./configure prefix=/home/wangjl/
$ make 
$ make install


检查版本号
$ samtools --version
samtools 1.16.1-18-g410d910
Using htslib 1.16-10-g6366029
Copyright (C) 2022 Genome Research Ltd.


2. 功能
按照标签筛选序列，标签在文件中
$ samtools view -D BC:barcodes.txt -o /data_folder/data.barcodes.bam /data_folder/data.bam

http://www.htslib.org/doc/samtools-sort.html










### old part: 

1.安装

(1) 方法1：不一定work...
第一步，从github下载所需版本samtools软件包
https://github.com/samtools/samtools


或
https://sourceforge.net/projects/samtools/files/samtools/1.5/
$ wget https://sourceforge.net/projects/samtools/files/samtools/1.10/samtools-1.10.tar.bz2/download


第二步，解压，此处以目前最新版samtools-1.5为例：
tar -jxf samtools-1.5.tar.bz2
cd samtools-1.5


第三步，编译，安装：
make
make prefix=/opt/biosoft/samtools-1.5 install


第四步，加入环境变量
echo 'export PATH=$PATH:/opt/biosoft/samtools-1.5/bin' >> /etc/profile


现在你已经不需要刚刚下载和解压的软件包了，愉快的删除吧。
cd ../ && rm -rf samtools-1.5 samtools-1.5.tar.bz2



bcftools安装几乎完全一样。需要注意的是，此处我用了root账户。对于普通用户，可以把软件安装在自己有读写权限的目录下，也就是说，要更改prefix=xxx和/etc/profile至你自己的文件目录和文件。
https://samtools.github.io/bcftools/howtos/install.html




(2) 方法2：CentOS 亲测可用
从github获取最新版本的包
git clone https://github.com/samtools/samtools.git
git clone https://github.com/samtools/htslib.git #并列放到同一个文件夹下


1)然后安装hslib
autoheader
autoconf
./configure  #根据提醒，先做 $ git submodule update --init --recursive
make
make prefix=~/ install


make 报错:
cram/cram_encode.c: In function ‘cram_build_ref’:
cram/cram_encode.c:2883:17: error: ‘for’ loop initial declarations are only allowed in C99 mode
                 for (int j = 0; j < cigar[i] >> BAM_CIGAR_SHIFT; j++)
                 ^
cram/cram_encode.c:2883:17: note: use option -std=c99 or -std=gnu99 to compile your code
make: *** [cram/cram_encode.o] Error 1
无解，使用 docker Ubuntu 吧。





2)进入samtools文件夹，执行命令：
autoheader            # Build config.h.in (this may generate a warning about
                      # AC_CONFIG_SUBDIRS - please ignore it).
autoconf -Wno-syntax  # Generate the configure script
./configure           # Needed for choosing optional functionality #如果samtool并列没有HTSlib会报错。
##make
##make install #error install: cannot create regular file ‘/usr/local/bin/samtools’: Permission denied

make prefix=~/ install #或在~/bin建软链接
make install


检查版本号：
$ samtools --version
samtools 1.9-69-gb217a91


========================================
专用软件
----------------------------------------


========================================
|-- 华为云下载工具: obsutil
----------------------------------------

1.
网页版使用方式: http://www.seqhealth.cn/view/139.html
命令行使用方式: http://www.seqhealth.cn/view/140.html

(1)下载安装
$ wget  https://obs-community.obs.cn-north-1.myhuaweicloud.com/obsutil/current/obsutil_linux_amd64.tar.gz

$ tar -zxvf obsutil_linux_amd64.tar.gz
obsutil_linux_amd64_5.3.4/
obsutil_linux_amd64_5.3.4/obsutil
obsutil_linux_amd64_5.3.4/setup.sh

下载好的软件直接解压可用。

$ cd obsutil_linux_amd64_5.3.4/
$ ls -lth
total 15M
-r-x------ 1 wangjl wangjl  15M Jun  1 10:24 obsutil
-rw------- 1 wangjl wangjl 2.1K Jun  1 10:24 setup.sh

把 obsutil 放到路径中。
$ ln -s /home/wangjl/soft/obsutil_linux_amd64_5.3.4/obsutil ~/bin/

检查版本号:
$ obsutil version
obsutil version:5.3.4, obssdk version:2.2.12
operating system:linux, arch:amd64





(2) 数据下载
查看邮件，会有一个链接，一个授权码

Authorization  Code:
https://e-share.obs-website.cn-north-1.myhuaweicloud.com?token=4y6D2Av.....eg==

Access Code:
200414

* Valid Until:
Wed, 15 Apr 2020 11:09:12 GMT +0800



下载数据
$ obsutil share-cp https://e-share.obs-website.cn-north-1.myhuaweicloud.com?token=4y...eg== /home/wangjl/data/ZhangMin/ -ac=200414  -r -f -u -vlength -vmd5

参数解释:
命令组成为“obsutil“+ ”Authorization Code“+ ”folder_url“ + ”-ac=Access Code” + “ -r -f  -u -vlength -vmd5”
	Authorization Code：下载链接
	folder_url：本地存储路径，上述示例中的本地路径为“/home/seqhealth/data/”，正式下载时请替换
		远程项目一般自带文件夹，故本地子文件夹可有可无；为了安全，建议加上子文件夹，大不了下载完再mv到外层。
	-ac：提取码
	-r：批量下载
	-f：强制下载，不进行逐个询问
	-u：增量下载
	-vlength：下载完成后，验证本地文件大小是否与桶中对象的大小一致
	-vmd5：下载完成后，验证本地文件的MD5值是否与桶中对象的MD5值一致
#


输出: 很多内容，只关心时间和最后结论。
Start at 2021-06-02 06:09:50.121111689 +0000 UTC
下载进度为100%，且Failed数量为0，则下载完成。



(3) 下载有失败的怎么办？

两个都有失败的：
Succeed count is:   10        Failed count is:    4
Succeed count is:   7         Failed count is:    7 


华为官网的解释: https://support.huaweicloud.com/obs_faq/obs_faq_0068.html
- 重新执行下载命令。
obsutil在下载的时候默认开启断点续传，此时只要重新执行之前的下载命令就可以将之前下载失败的对象采用续传的方式重新下载到本地。
- 如果问题未能解决，请将obsutil升级到最新版本再进行下载。
- 如果问题仍然存在，请联系客服处理。


再次执行:
Succeed count is:   14        Failed count is:    0         Skip count is:      14 

Succeed count is:   14        Failed count is:    0         Skip count is:      7         
Warning count is:   7         不知道这个 Warning 干啥的。
Succeed bytes is:   12.10GB



(4) 进文件夹检查 md5 值
不知道为什么，华为的md5文件顺序是反的，需要2列颠倒后check。

$ awk '{print $2"\t"$1}' UID.md5.txt >UID.md5

$ md5sum -c UID.md5
ADK_WT_1.dedup.R1.fastq.gz: OK
...  
ADK_KO_3.dedup.R2.fastq.gz: OK
全部都是OK则通过文件完整性校验。





========================================
----------------------------------------



========================================
----------------------------------------


========================================
----------------------------------------


========================================
----------------------------------------



========================================
----------------------------------------


========================================
----------------------------------------


========================================
----------------------------------------

